# gpbcuda

./: .gitignore  CMakeLists.txt  Makefile  README.md  clean_build  globalPb.cu  globalPb.h  main.cpp
src/kernels/: bgr2grey.cu  bgr2grey.h  bgr2lab.cu  bgr2lab.h
